Fix nav alignment

--- a/src/components/UI/navTop/navTop.module.css
+++ b/src/components/UI/navTop/navTop.module.css
@@ -2,6 +2,7 @@
 
 .nav {
 	width: 100%;
+	align-self: center;
 	max-width: var(--website-width);
 	/* margin: auto; */
 	display: flex;
